--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator Rate Credit – Versiune FINALĂ 100% REALĂ</title>
+    <title>Calculator Rate Credit – Versiune FINALĂ PERFECTĂ</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 20px; background: #f5f5f5;}
@@ -24,11 +24,12 @@
         .copy-btn:hover {background: #2980b9;}
         button.main {background: #27ae60; color: white; padding: 16px 40px; border: none; border-radius: 8px; font-size: 19px; cursor: pointer; font-weight: bold;}
         button.main:hover {background: #219653;}
+        #mesajClient {margin:30px 0; padding:25px; background:#f0f8ff; border-radius:12px; border-left:6px solid #3498db;}
     </style>
 </head>
 <body>
     <div class="calculator">
-        <h1>Calculator Rate Credit – 100% REAL</h1>
+        <h1>Calculator Rate Credit</h1>
         
         <div class="form-group">
             <label>Perioada credit:</label>
@@ -40,7 +41,7 @@
 
         <div class="form-group">
             <label>Valoare totală produs (LEI):</label>
-            <input type="number" id="sumaTotala" value="100000" min="1000" step="100">
+            <input type="number" id="sumaTotala" value="500000" min="1000" step="100">
         </div>
 
         <div class="form-group">
@@ -78,7 +79,7 @@
                 Rata lunară: <strong id="rataLunara">0</strong> LEI
             </div>
 
-            <!-- SECȚIUNE MAGAZIN – CALCUL 100% REAL -->
+            <!-- SECȚIUNE MAGAZIN -->
             <div class="magazin">
                 <strong>Tu (magazinul) primești în cont de la bancă:</strong><br><br>
                 <div style="font-size:32px; color:#d35400; margin:10px 0;">
@@ -90,8 +91,8 @@
                 </div>
             </div>
 
-            <!-- MESAJ PREGĂTIT PENTRU CLIENT (apare doar când e bifată Opțiunea +) -->
-            <div id="mesajClient" style="display:none; margin:30px 0; padding:25px; background:#e8f5e9; border-radius:12px; border-left:6px solid #27ae60;">
+            <!-- MESAJ PREGĂTIT PENTRU CLIENT – apare întotdeauna -->
+            <div id="mesajClient">
                 <strong>Mesaj gata de trimis clientului (WhatsApp / Viber):</strong><br><br>
                 <div id="textMesaj" style="background:white; padding:18px; border-radius:8px; font-size:16px; line-height:1.7; white-space: pre-line;"></div><br>
                 <button class="copy-btn" onclick="copyToClipboard()">Copiază mesajul</button>
@@ -117,10 +118,10 @@
             const rataLunara = sumaCuPlus / perioada;
             const pretTotalClient = sumaCuPlus + avans;
 
-            // BANCA scade comisionul din suma deja majorată
+            // Banca scade comisionul din suma deja majorată
             const comisionBanca = perioada === 6 ? 4.5 : 7.5;
             const sumaIncasata = sumaCuPlus * (1 - comisionBanca / 100);
-            const profitReal = sumaIncasata - sumaCreditata;   // profitul tău real cu Opțiunea +
+            const profitReal = sumaIncasata - sumaCreditata;
 
             // Afisare client
             document.getElementById('sumaCreditata').textContent = sumaCreditata.toFixed(0);
@@ -135,20 +136,23 @@
                 document.getElementById('pretFinalClient').style.display = 'none';
             }
 
-            // Încasare magazin
+            // Magazin
             document.getElementById('sumaIncasata').textContent = sumaIncasata.toFixed(0);
-
             if (plusActiv) {
                 document.getElementById('detaliuBanca').innerHTML = `Banca îți virează ${sumaCuPlus.toFixed(0)} × (100% − ${comisionBanca}%)`;
                 document.getElementById('profitReal').innerHTML = `<span class="profit">Profitul tău real: +${profitReal.toFixed(0)} LEI</span>`;
+            } else {
+                document.getElementById('detaliuBanca').innerHTML = `Banca îți scade ${comisionBanca}% din suma creditată`;
+                document.getElementById('profitReal').innerHTML = `Primești doar ${(sumaCreditata * (1 - comisionBanca/100)).toFixed(0)} LEI`;
+            }
 
-                // MESAJUL PENTRU CLIENT (apare doar cu Opțiunea +)
-                const mesaj = `Bună${sumaTotala >= 100000 ? '!' : ' ziua!'}
+            // MESAJ PENTRU CLIENT – întotdeauna vizibil, fără a menționa "Opțiunea +"
+            const mesaj = `Bună!
 
 Pentru produsul de ${sumaTotala.toLocaleString()} LEI am pregătit varianta cea mai avantajoasă pentru amândoi:
 
 Avans: ${avans.toLocaleString()} LEI
-Restul în ${perioada} rate prin credit + Opțiunea +
+Restul în ${perioada} rate prin credit
 
 Astfel:
 • Primiți imediat produsul
@@ -159,13 +163,7 @@ Vă convine? Vă pregătesc actele în 10 minute!
 
 Mulțumesc și aștept confirmarea!`;
 
-                document.getElementById('textMesaj').textContent = mesaj;
-                document.getElementById('mesajClient').style.display = 'block';
-            } else {
-                document.getElementById('detaliuBanca').innerHTML = `Banca îți scade ${comisionBanca}% din suma creditată`;
-                document.getElementById('profitReal').innerHTML = `Primești doar ${(sumaCreditata * (1 - comisionBanca/100)).toFixed(0)} LEI`;
-                document.getElementById('mesajClient').style.display = 'none';
-            }
+            document.getElementById('textMesaj').textContent = mesaj;
 
             document.getElementById('rezultate').style.display = 'block';
         }
@@ -177,7 +175,6 @@ Mulțumesc și aștept confirmarea!`;
             });
         }
 
-        // Actualizare automată
         document.querySelectorAll('input').forEach(el => {
             el.addEventListener('input', calculeaza);
             el.addEventListener('change', calculeaza);
