--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator Rate Credit</title>
-    <link rel="icon" type="image/x-icon" href="/calculator.png">
+    <!-- FAVICON ADĂUGAT CORECT -->
+    <link rel="icon" type="image/png" href="calculator.png">
+    <!-- Sau dacă vrei să funcționeze și în alte formate (recomandat) -->
+    <!-- <link rel="icon" type="image/x-icon" href="calculator.png"> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 20px; background: #f5f5f5;}
