--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
 
 Pentru produsul de ${sumaTotala.toLocaleString()} LEI am pregătit varianta cea mai avantajoasă pentru dumneavoastră:
 
+
 Avans: ${avans.toLocaleString()} LEI
+Suma creditată: ${sumaCuPlus.toFixed(0)} LEI
 Restul în ${perioada} rate fixe.
 
 Astfel:
